--- a/src/main/java/presentacion/Interfaz.form
+++ b/src/main/java/presentacion/Interfaz.form
@@ -18,6 +18,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Nuevo Juego"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="juegoNuevoActionPerformed"/>
+              </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="salirJuego">
               <Properties>
@@ -50,6 +53,7 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="resizable" type="boolean" value="false"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="menuBar" type="java.lang.String" value="barraNavegacion"/>
